<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/first_login_progress_bar"
        style="@style/Widget.Material3.LinearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:max="4"
        android:scaleX="0.75"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewFlipper
        android:id="@+id/first_login_image_flipper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoStart="true"
        android:flipInterval="4000"
        android:foregroundGravity="center"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintBottom_toTopOf="@id/first_login_vf_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_login_progress_bar">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_first_login_image"
            app:srcCompat="@drawable/first_login_7" />

    </ViewFlipper>

    <ViewFlipper
        android:id="@+id/first_login_vf_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/first_login_bt_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_login_et_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
            app:counterEnabled="true"
            app:counterMaxLength="@string/max_length_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_login_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_name"
                android:inputType="textPersonName"
                android:maxLength="@string/max_length_name"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_login_et_nickname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
            app:counterEnabled="true"
            app:counterMaxLength="@string/max_length_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_login_et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_nickname"
                android:inputType="textPersonName"
                android:maxLength="@string/max_length_nickname"
                android:minHeight="48dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/first_login_tv_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_role"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/first_login_spinner_role"
                app:layout_constraintEnd_toStartOf="@+id/first_login_spinner_role"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/first_login_spinner_role" />

            <Spinner
                android:id="@+id/first_login_spinner_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/first_login_tv_role"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/poppins_regular_semi_bold"
                android:text="@string/first_login_add_profile_picture"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/first_login_profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/first_login_profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/default_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/first_login_tv_congrats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_login_tv_subject_last"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewFlipper>

    <Button
        android:id="@+id/first_login_bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/bt_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_login_bt_previous"
        app:layout_constraintTop_toBottomOf="@+id/first_login_image_flipper"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/first_login_bt_previous"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/bt_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/first_login_bt_next"
        app:layout_constraintEnd_toStartOf="@+id/first_login_bt_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_login_bt_next" />

</androidx.constraintlayout.widget.ConstraintLayout>